# sample-fairy-bot

./: .envrc.sample  .gitignore  package.json  pyproject.toml  serverless.yml
src/: constants.py  handler.py
