[tool.poetry]
name = "zunda-fairy-bot"
version = "0.1.0"
description = ""
authors = ["kumamoto <onioni9999nagare@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.14.3"
boto3 = "^1.24.61"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
